# transformers-ocr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  __init__.py  generate_data.py  gitignore  predict.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup_structure.ps1  train.py
.github/workflows/: ci.yml
assets/: README.md
configs/: config.py
engine/: augment.py  codec.py  dataset.py  loss.py  preprocess.py
models/: svtr.py
notebooks/: colab_train.ipynb
tests/: test_core.py
tools/: export_onnx.py  predict.py  prepare_dataset.py
workflow/: PULL_REQUEST_TEMPLATE.md  bug_report.md  ci.yml  feature_request.md
