[project]
name            = "transformers-ocr"
version         = "1.0.0"
description     = "Production-grade SVTR-based OCR for numeric and industrial digit reading"
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [{ name = "Lourdhu02", email = "lourdhu02@gmail.com" }]
requires-python = ">=3.10"
keywords        = ["ocr", "svtr", "transformer", "scene-text", "ctc"]
classifiers     = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "albumentations>=1.4.0",
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "editdistance>=0.8.1",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "tqdm>=4.66.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.9.0",
  "ruff>=0.4.4",
  "pre-commit>=3.7.0",
]
fast = ["ctcdecode"]

[project.scripts]
ocr-train    = "train:main"
ocr-predict  = "predict:main"
ocr-export   = "tools.export_onnx:main"
ocr-generate = "tools.generate_data:main"

[project.urls]
Homepage    = "https://github.com/Lourdhu02/transformers-ocr"
Repository  = "https://github.com/Lourdhu02/transformers-ocr"
Issues      = "https://github.com/Lourdhu02/transformers-ocr/issues"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_unused_ignores    = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit   = ["tests/*", "tools/*", "data/*", "weights/*", "exports/*", "logs/*"]